Fix error message alignment

--- a/frontend/sozisel-app/src/components/LoginScreen/LoginScreen.scss
+++ b/frontend/sozisel-app/src/components/LoginScreen/LoginScreen.scss
@@ -30,4 +30,11 @@
     flex: 1;
     padding: $spacing-05;
   }
+
+  .errorContainer {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
